# shogi-camera

./: .editorconfig  .gitignore  .gitmodules  .swift-format  CHANGELOG  CMakeLists.txt  LICENSE  Makefile
app/: Analyzer.swift  AppDelegate.swift  BoardLayer.swift  CGRect+Utility.swift  CGSize+Utility.swift  Colors.swift  DebugPreview.swift  GameView.swift  GameviewController.swift  HelpViewController.swift  Info.plist  LaunchScreen.storyboard  MainViewController.swift  Reader.swift  RoundButton.swift  ShogiCamera+Utility.swift  StableBoardLayer.swift  StartView.swift  VideoOverlay.swift
app/Assets.xcassets/cameraInstructionImage.imageset/: Contents.json
app/Assets.xcassets/gameInstructionImage.imageset/: Contents.json
demo/: AppDelegate.swift  OpenCV+Utility.swift  ViewController.swift
demo/shogi-camera-input-demo/opencv-study/: main.cpp
demo/shogi-camera-input-demo/shogi-camera-input-demo/: AppDelegate.swift  DebugPreview.swift  Reader.swift  ShogiCameraInput+Utility.swift  ViewController.swift  shogi-camera-input-demo-Bridging-Header.h
demo/shogi-camera-input-demo/shogi-camera-input-demo.xcodeproj/: project.pbxproj
demo/shogi-camera-input-demo/test/: main.cpp
include/shogi_camera/: module.modulemap  shogi_camera.hpp
include/shogi_camera_input/: module.modulemap  shogi_camera_input.h  shogi_camera_input.hpp
include/shogi_camera_input/objc/: shogi_camera_input.h
res/voice/: concat.sh  voice.vvproj
src/: csa_adapter.cpp  csa_server.cpp  game.cpp  img.cpp  micro686_ai.cpp  micro688_ai.cpp  move.cpp  piece_book.cpp  piece_contour.cpp  position.cpp  random_ai.cpp  session.cpp  shogi_camera.cpp  shogi_camera_input.cpp  shogi_camera_input.mm  statistics.cpp  sunfish3_ai.cpp
src/objc/: shogi_camera.mm  shogi_camera_input.mm
test/: doctest_main.cpp  game.test.hpp  img.test.hpp  main.cpp  move.test.hpp  sunfish3.test.hpp
